[package]
name = "explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_shared = {path="../lib_shared"}
lib = {path="../lib"}
async-std = "1.7"
async-trait = "0.1.41"
chrono = "0.4"
threadpool="1.8.1"
log = "0.4"
crossbeam = "0.8"
crossbeam-utils = "0.8"
rand = "0.8"
protobuf = { version = "2", features = ["with-bytes"] }
once_cell = "1.8.0"
anyhow = "1.0.43"
futures-util = "0.3"
futures = "0.3"
tokio = { version = "1.13.*", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "mysql", "chrono", "time", "decimal", "json"] }
serde_json = "1.0"
serde = {version="1.0",features = ["derive"]}
actix-web = "4.0.1"