[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_shared = {path="../lib_shared"}
once_cell = "1.8.0"
serde_json = "1.0"
serde = {version="1.0",features = ["derive"]}
mio = {version="0.8.0",features = ["os-poll", "net"]}
rand = "0.8"
tokio = { version = "1.13.*", features = ["full"] }
async-std = {version="1.7.0",features = ["std", "alloc"]}
async-trait = "0.1"
chrono = "0.4"
threadpool="1.8.1"
log = "0.4"
crossbeam = "0.8"
crossbeam-utils = "0.8"
protobuf = { version = "2", features = ["with-bytes"] }
bytes = "1"
fern = {version = "0.5.0"}
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "mysql", "chrono", "time", "decimal"] }
futures-util = "0.3"
futures = "0.3"
num_cpus = "1.13.0"
anyhow = "1.0.43"
actix-web = "4.0.1"
