[package]
name = "lib_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
rand = {version ="0.8", features = ["default"]}
once_cell = "1.8.0"
serde_json = "1.0"
serde = {version="1.0",features = ["derive"]}
crossbeam = "0.8"
crossbeam-utils = "0.8"
chrono = "0.4"
log = "0.4"
protobuf = { version = "2", features = ["with-bytes"] }
bytes = "1"
pistoncore-input = "1.0.0"
aes = "0.7.5"
smallvec = "~1"

[features]
default = []
event_listener = []
